# sharez

./: README.md  setup.cfg
pyshare/: __init__.py  __main__.py
sharez/: __init__.py  __main__.py
