[metadata]
name = sharez
version = 0.1.0
description = Share files easily inside your local network
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mbroton/sharez
author = Michal Broton
author_email = michal@broton.dev
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    qrcode==7.3.1
python_requires = >=3.7

[options.entry_points]
console_scripts =
    sharez = sharez:main
